// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`httpie > curl: 'adds basic auth credentials' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Authorization:Basic dXNlcjpwYXNz'"
`;

exports[`httpie > curl: 'doesn\\'t add empty cookies' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'doesn\\'t add empty headers' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'escapes single quotes in JSON body' 1`] = `
"http --ignore-stdin 'POST' 'https://editor.scalar.com/test' \\
  'Content-Type:application/json' \\
  --raw '"hell'\\''o"'"
`;

exports[`httpie > curl: 'handles JSON body with special charac…' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/json' \\
  --raw '{"key":"\\"quotes\\" and \\\\backslashes\\\\","nested":{"array":["item1",null,null]}}'"
`;

exports[`httpie > curl: 'handles URLs with dollar sign charact…' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/path$with$dollars'"`;

exports[`httpie > curl: 'handles URLs with dollar signs in pat…' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/api$v1/prices?amount=%2450.00'"`;

exports[`httpie > curl: 'handles URLs with dollar signs in que…' 1`] = `"http --ignore-stdin 'GET' 'https://example.com?price=%24100&currency=USD%24'"`;

exports[`httpie > curl: 'handles binary data flag' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/octet-stream' \\
  --raw 'binary content'"
`;

exports[`httpie > curl: 'handles compressed response' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Accept-Encoding:gzip, deflate'"
`;

exports[`httpie > curl: 'handles cookies with special characte…' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Cookie:special%3Bcookie=value%20with%20spaces'"
`;

exports[`httpie > curl: 'handles empty URL' 1`] = `"http --ignore-stdin 'GET' ''"`;

exports[`httpie > curl: 'handles extremely long URLs' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'"`;

exports[`httpie > curl: 'handles headers with empty values' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'X-Empty;'"
`;

exports[`httpie > curl: 'handles multipart form data content t…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="user"\\0015\\0012Content-Type: application/json;charset=utf-8\\0015\\0012\\0015\\0012'
  printf '%b' '{"name":"scalar"}'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'handles multipart form data content t…' 2`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file"; filename="test.txt"\\0015\\0012Content-Type: text/plain\\0015\\0012\\0015\\0012'
  cat -- 'test.txt'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'handles multipart form data with JSON…' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data' \\
  --raw '{"foo":"bar"}'"
`;

exports[`httpie > curl: 'handles multipart form data with empt…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file"; filename=""\\0015\\0012Content-Type: application/octet-stream\\0015\\0012\\0015\\0012'
  cat -- ''
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'handles multipart form data with files' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file"; filename="test.txt"\\0015\\0012Content-Type: application/octet-stream\\0015\\0012\\0015\\0012'
  cat -- 'test.txt'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="field"\\0015\\0012\\0015\\0012'
  printf '%b' 'value'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'handles multipart form data with sing…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="field'\\''name"\\0015\\0012\\0015\\0012'
  printf '%b' 'value'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file'\\''name"; filename="test.txt"\\0015\\0012Content-Type: application/octet-stream\\0015\\0012\\0015\\0012'
  cat -- 'test.txt'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'handles multiple headers with same na…' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'X-Custom:value1' \\
  'X-Custom:value2'"
`;

exports[`httpie > curl: 'handles special characters in URL' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/path%20with%20spaces/[brackets]'"`;

exports[`httpie > curl: 'handles special characters in auth cr…' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Authorization:Basic dXNlckBleGFtcGxlLmNvbTpwYXNzOndvcmQh'"
`;

exports[`httpie > curl: 'handles special characters in query p…' 1`] = `"http --ignore-stdin 'GET' 'https://example.com?q=hello%20world%20%26%20more&special=!%40%23%24%25%5E%26*()'"`;

exports[`httpie > curl: 'handles undefined auth object' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'handles url-encoded form data with si…' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/x-www-form-urlencoded' \\
  --raw 'field%27name=value'"
`;

exports[`httpie > curl: 'handles url-encoded form data with sp…' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/x-www-form-urlencoded' \\
  --raw 'special+chars%21%40%23=value'"
`;

exports[`httpie > curl: 'has JSON body' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/json' \\
  --raw '{"hello":"world"}'"
`;

exports[`httpie > curl: 'has cookies' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Cookie:foo=bar; bar=foo'"
`;

exports[`httpie > curl: 'has headers' 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Content-Type:application/json'"
`;

exports[`httpie > curl: 'has query string' 1`] = `"http --ignore-stdin 'GET' 'https://example.com?foo=bar&bar=foo'"`;

exports[`httpie > curl: 'joins query string parameters with & …' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/api?existing=1&foo=bar'"`;

exports[`httpie > curl: 'leaves non-JSON multipart values unto…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="props"\\0015\\0012Content-Type: application/json\\0015\\0012\\0015\\0012'
  printf '%b' 'not json'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'omits auth when not provided' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'omits auth when password is missing' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'omits auth when username is missing' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > curl: 'prettifies JSON body' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/json' \\
  --raw '{"nested":{"array":[1,2,3],"object":{"foo":"bar"}},"simple":"value"}'"
`;

exports[`httpie > curl: 'pretty-prints --data bodies whose mim…' 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/vnd.api+json' \\
  --raw '{"a":1}'"
`;

exports[`httpie > curl: 'pretty-prints --data bodies whose mim…' 2`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/json;charset=utf-8' \\
  --raw '{"a":1}'"
`;

exports[`httpie > curl: 'pretty-prints --form parts whose cont…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="props"\\0015\\0012Content-Type: application/vnd.custom+json\\0015\\0012\\0015\\0012'
  printf '%b' '{"a":1}'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'pretty-prints JSON multipart parts al…' 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file"; filename="filename"\\0015\\0012Content-Type: application/octet-stream\\0015\\0012\\0015\\0012'
  cat -- 'filename'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="props"\\0015\\0012Content-Type: application/json\\0015\\0012\\0015\\0012'
  printf '%b' '{"name":"","description":"","created_at":null}'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com/widget/v1/widgets' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > curl: 'quotes a URL whose query string has n…' 1`] = `"http --ignore-stdin 'GET' 'https://example.com/api?param1=value1&param2=value2'"`;

exports[`httpie > curl: 'returns a POST request' 1`] = `"http --ignore-stdin 'POST' 'https://example.com'"`;

exports[`httpie > curl: 'returns a basic request' 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;

exports[`httpie > handles binary data 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/octet-stream' \\
  --raw 'binary content'"
`;

exports[`httpie > handles headers with empty values 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'X-Empty;'"
`;

exports[`httpie > handles multipart form data with files 1`] = `
"{
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="file"; filename="test.txt"\\0015\\0012Content-Type: application/octet-stream\\0015\\0012\\0015\\0012'
  cat -- 'test.txt'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary\\0015\\0012Content-Disposition: form-data; name="field"\\0015\\0012\\0015\\0012'
  printf '%b' 'value'
  printf '%b' '\\0015\\0012'
  printf '%b' '--scalar-boundary--\\0015\\0012'
} | http 'POST' 'https://example.com' \\
  'Content-Type:multipart/form-data; boundary=scalar-boundary'"
`;

exports[`httpie > handles multiple headers with same name 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'X-Custom:value1' \\
  'X-Custom:value2'"
`;

exports[`httpie > handles query string parameters 1`] = `"http --ignore-stdin 'GET' 'https://example.com/api?param1=value1&param2=special%20value&param3=123'"`;

exports[`httpie > handles special characters in URL 1`] = `"http --ignore-stdin 'GET' 'https://example.com/path%20with%20spaces/[brackets]'"`;

exports[`httpie > handles url-encoded form data with special characters 1`] = `
"http --ignore-stdin 'POST' 'https://example.com' \\
  'Content-Type:application/x-www-form-urlencoded' \\
  --raw 'special+chars%21%40%23=value'"
`;

exports[`httpie > has headers 1`] = `
"http --ignore-stdin 'GET' 'https://example.com' \\
  'Content-Type:application/json'"
`;

exports[`httpie > returns a POST request 1`] = `"http --ignore-stdin 'POST' 'https://example.com'"`;

exports[`httpie > returns a basic request 1`] = `"http --ignore-stdin 'GET' 'https://example.com'"`;
